--- a/megaBlog/src/App.css
+++ b/megaBlog/src/App.css
@@ -1,8 +1,7 @@
 
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  max-width: 1440px;
+  margin: 0;
   text-align: center;
 }
 
@@ -40,4 +39,9 @@
 
 .read-the-docs {
   color: #888;
+}
+
+/* Force labels to left alignment */
+label {
+  text-align: left !important;
 }
